package com.example.steamtracker.ui.components

import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Row
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.width
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.material3.ButtonDefaults
import androidx.compose.material3.Card
import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.Surface
import androidx.compose.material3.Text
import androidx.compose.material3.TextButton
import androidx.compose.runtime.Composable
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.text.style.TextOverflow
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.compose.ui.window.Dialog
import coil.compose.AsyncImage
import coil.request.ImageRequest
import com.example.steamtracker.R
import com.example.steamtracker.model.AppDetails
import com.example.steamtracker.model.CollectionApp
import com.example.steamtracker.ui.theme.SteamTrackerTheme

@Composable
fun CollectionCard(
    onRemoveClick: () -> Unit,
    collection: Pair<String, List<CollectionApp>>,
    collectionsAppDetails: List<AppDetails?>,
    navigateCollection: () -> Unit,
    onCollectionSelect: (Pair<String, List<CollectionApp>>) -> Unit,
    modifier: Modifier = Modifier
) {
    Card(
        modifier = modifier
            .fillMaxWidth()
            .padding(12.dp),
        onClick = {
            onCollectionSelect(collection)
            navigateCollection()
        }
    ) {
        val firstCollectionApp = if (collection.second.isNotEmpty()) {
            collection.second[0]
        } else {
            null
        }
        val firstAppDetails = collectionsAppDetails.find {
            it?.steamAppId == firstCollectionApp?.appId
        }

        Row(
            modifier = modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically
        ) {
            AsyncImage(
                model = ImageRequest.Builder(context = LocalContext.current)
                    .data(firstAppDetails?.capsuleImage)
                    .crossfade(true)
                    .build(),
                error = painterResource(R.drawable.ic_broken_image),
                placeholder = painterResource(R.drawable.loading_img),
                contentDescription = "Image for ${firstAppDetails?.name}",
                contentScale = ContentScale.Crop,
                modifier = modifier
                    .width(128.dp)
                    .height(64.dp)
            )

            Text(
                text = collection.first,
                fontSize = 18.sp,
                maxLines = 2,
                overflow = TextOverflow.Ellipsis,
                modifier = modifier
                    .weight(1f)
                    .padding(start = 8.dp)
            )

            Spacer(modifier = Modifier.width(32.dp))

            Box(
                modifier = modifier.padding(end = 8.dp),
                contentAlignment = Alignment.CenterEnd
            ) {
                // Don't allow removing Wishlist or Favorites
                if (collection.first != "Wishlist" && collection.first != "Favorites") {
                    TextButton(
                        onClick = onRemoveClick,
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.errorContainer,
                            contentColor = MaterialTheme.colorScheme.error
                        )
                    ) {
                        Text(
                            text = "Remove",
                            fontSize = 14.sp
                        )
                    }
                }
            }
        }
    }
}

@Preview(showBackground = true)
@Composable
fun CollectionCardPreview() {
    SteamTrackerTheme {
        CollectionCard(
            onRemoveClick = {},
            collection = Pair("name", listOf()),
            collectionsAppDetails = listOf(),
            navigateCollection = {},
            onCollectionSelect = {}
        )
    }
}

@Composable
fun CollectionRemoveAlert(
    collectionName: String,
    onDismiss: () -> Unit,
    onSubmit: () -> Unit
) {
    Dialog(
        onDismissRequest = onDismiss,
    ) {
        Surface(
            shape = RoundedCornerShape(8.dp),
            color = MaterialTheme.colorScheme.surface,
            shadowElevation = 8.dp,
            modifier = Modifier.padding(16.dp)
        ) {
            Column(
                modifier = Modifier.padding(16.dp),
                verticalArrangement = Arrangement.spacedBy(8.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                Text(
                    text = "Remove from Collections",
                    style = MaterialTheme.typography.titleMedium
                )

                Text(
                    text = "Are you sure you want to remove the $collectionName collection?",
                    fontSize = 14.sp
                )

                Row(
                    modifier = Modifier.fillMaxWidth(),
                    horizontalArrangement = Arrangement.SpaceEvenly
                ) {
                    TextButton(
                        onClick = onDismiss,
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primaryContainer,
                            contentColor = MaterialTheme.colorScheme.primary
                        )
                    ) {
                        Text("Cancel")
                    }
                    TextButton(
                        onClick = onSubmit,
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.errorContainer,
                            contentColor = MaterialTheme.colorScheme.error
                        )
                    ) {
                        Text("Remove Collection")
                    }
                }
            }
        }
    }
}

@Preview(showBackground = true)
@Composable
fun CollectionRemoveAlertPreview() {
    SteamTrackerTheme {
        CollectionRemoveAlert(
            collectionName = "name",
            onDismiss = {},
            onSubmit = {}
        )
    }
}
