...
        Row(
            modifier = Modifier.padding(8.dp),
            horizontalArrangement = Arrangement.Center,
            verticalAlignment = Alignment.CenterVertically
        ) {
            Text(
                text = "Collections",
                fontSize = 14.sp,
                textAlign = TextAlign.Center,
                color = colorResource(R.color.collections_text)
            )

            DropdownMenu(
...
